[Fix] Main content gap issue

--- a/style.css
+++ b/style.css
@@ -169,7 +169,6 @@ body {
 
 .mainContent {
     background-color: var(--maincolor);
-    display: flex;
     flex-direction: column;
     padding: 15px;
 }
